--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.road {
+.roadContainer {
     height: 250px;
     background-color: gray;
     display:flex;
@@ -7,14 +7,75 @@
     overflow: scroll;
     position: relative;
 }
-.road div {
+.roadContainer div {
     background-color: white;
     height: 6px;
     min-width: 5%;
 
 }
-.road div span {
+.roadContainer div span {
     position:absolute;
     bottom: 20px;
 }
+
+
+.speedContainer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 10px 0;
+}
+
+
+.speedContainer button {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 7px solid gray;
+    font-size: 30px;
+    font-weight: bold;
+    color: gray;
+    cursor: pointer;
+}
+
+.surfaceContainer {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin: 10px 0;
+}
+
+.surfaceContainer button {
+    width: 80px;
+    height: 100px;
+    border: 5px solid gray;
+    border-radius: 20%;
+    background: none;
+    cursor: pointer;
+}
+
+
+#start {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    background-color: #64a2e4;
+    border: none;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+#start:focus {
+    background-color: #3f76b1;
+    outline: none;
+}
+
+
+
+
+
+
 
