--- a/style.css
+++ b/style.css
@@ -1,12 +1,39 @@
+body {
+    background-image: url('../pictures/city.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    font-size: 20px;
+    font-weight: 10;
+    margin-bottom: 5px;
+    text-align: center; 
+}
+
+
 .roadContainer {
-    height: 250px;
+    height: 90px;
     background-color: gray;
-    display:flex;
+    display: flex;
     align-items: center;
     gap: 5%;
     overflow: scroll;
     position: relative;
+    margin-top: 80px;
+    scrollbar-width: none; 
 }
+
 .roadContainer div {
     background-color: white;
     height: 6px;
@@ -26,19 +53,20 @@
 }
 
 .speedContainer button {
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     border: 7px solid gray;
     font-size: 30px;
     font-weight: bold;
     color: gray;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .speedContainer .active{
-    border-color: black;
-    color: black;
+    border-color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
 }
 
 
@@ -50,13 +78,31 @@
 }
 
 .surfaceContainer button {
-    width: 80px;
-    height: 100px;
+    width: 60px;
+    height: 80px;
     border: 5px solid gray;
     border-radius: 20%;
-    background: none;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     cursor: pointer;
 }
+
+
+button[data-coeff="0.8"] {
+    background-image: url('../pictures/dry_road.jpg');
+  }
+  button[data-coeff="0.5"] {
+    background-image: url('../pictures/wet_road.jpg');
+  }
+  button[data-coeff="0.25"] {
+    background-image: url('../pictures/snow_road.jpg');
+  }
+  button[data-coeff="0.1"] {
+    background-image: url('../pictures/ice_road.jpg');
+    background-size: 118%;
+    background-color: white;
+  }
 
 .surfaceContainer .active{
     border-color: black;
@@ -77,7 +123,7 @@
 }
 
 #start:focus {
-    background-color: #3f76b1;
+    background-color: #56a5f9;
     outline: none;
 }
 
