--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-body {
-    background-image: url('../pictures/city.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 h1 {
     text-align: center;
     font-size: 40px;
@@ -42,22 +34,22 @@ label {
 }
 .roadContainer div span {
     position:absolute;
-    bottom: 20px;
+    bottom: 10px;
 }
 
 .speedContainer {
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-bottom: 10px 0;
+    margin-bottom: 5px 0;
 }
 
 .speedContainer button {
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
-    border: 7px solid gray;
-    font-size: 30px;
+    border: 5px solid gray;
+    font-size: 20px;
     font-weight: bold;
     color: gray;
     cursor: pointer;
@@ -79,7 +71,7 @@ label {
 
 .surfaceContainer button {
     width: 60px;
-    height: 80px;
+    height: 60px;
     border: 5px solid gray;
     border-radius: 20%;
     background-size: cover;
@@ -116,19 +108,49 @@ button[data-coeff="0.8"] {
     font-size: 24px;
     font-weight: bold;
     color: white;
-    background-color: #64a2e4;
+    background-color:#f82836;
     border: none;
     border-radius: 10px;
     transition: all 0.3s ease;
 }
 
 #start:focus {
-    background-color: #56a5f9;
+    background-color:#f82836;
     outline: none;
 }
 
+.roadWrapper{
+    position: relative;
+}
 
+.carContainer{
+    position: absolute;
+    width: 260px;
+    top: -40px;
+    z-index: 1;
+}
 
+img{
+    width: 100%;
+    margin-top: 30px;
+    margin-left: 70px;
+}
+
+.wheel_first, .wheel_second{
+    position:absolute;
+    width: 19%;
+    aspect-ratio: 1 / 1;
+}
+
+.wheel_first{
+    left: 7.5%;
+    bottom: -0.2%;
+}
+
+.wheel_second{
+    left:73.5%;
+    bottom: -0.4%;
+}
 
 
 
