--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    margin: 0;
+    font-weight: 400;
+}
+
 h1 {
     text-align: center;
     font-size: 40px;
@@ -8,11 +15,10 @@ h1 {
 label {
     display: block;
     font-size: 20px;
-    font-weight: 10;
     margin-bottom: 5px;
-    text-align: center; 
+    text-align: center;
+    color: gray;
 }
-
 
 .roadContainer {
     height: 90px;
@@ -22,7 +28,6 @@ label {
     gap: 5%;
     overflow: scroll;
     position: relative;
-    margin-top: 80px;
     scrollbar-width: none; 
 }
 
@@ -34,14 +39,28 @@ label {
 }
 .roadContainer div span {
     position:absolute;
-    bottom: 10px;
+    bottom: 3px;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: Arial;
+    color:white;
+    letter-spacing: -0.05em;
+    white-space: nowrap;
+    
+}
+
+.messageContainer{
+    padding: 30px 20px;
+    text-align: center;
 }
 
 .speedContainer {
     display: flex;
     justify-content: center;
     gap: 10px;
+    color: gray;
     margin-bottom: 5px 0;
+
 }
 
 .speedContainer button {
@@ -126,7 +145,7 @@ button[data-coeff="0.8"] {
 .carContainer{
     position: absolute;
     width: 260px;
-    top: -40px;
+    top: -50px;
     z-index: 1;
 }
 
